@@ -1,3 +1,6 @@
+2012-10-04 Tsi YANG <tsi@in-cite.net>
+	* Feature: Implemented renderFilegroupExtraFields hook.
+
 2012-06-21 Aurelien GRAYO <aurelien@in-cite.net>
 	* Change extension owner to Plan.Net
 	* Publication to the TER
